pwa-marketplace/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketplace-app
spec:
  selector:
    app: marketplace-app
  ports:
  - port: 80
    targetPort: 80
  - port: 8080
    targetPort: 8080
  - port: 8081
    targetPort: 8081
  - port: 8082
    targetPort: 8082
  - port: 8083
    targetPort: 8083
  type: ClusterIP
